manifests/network/ingress-nginx/ingress-dns.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: internalingress-dns
  namespace: dns
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx  # Adjust this if your Ingress class name is different
  tls:
    - hosts:
        - adguard.frittylab.xyz
        - dns.frittylab.xyz
      secretName: frittylab-tls
  rules:
    - host: adguard.frittylab.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: adguardhome
                port:
                  number: 80
    - host: dns.frittylab.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: adguardhome
                port:
                  number: 80
