manifests/network/ingress-nginx/ingress-passthrough.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: internalingress-passthrough
  namespace: notinkube
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx  # Adjust this if your Ingress class name is different
  tls:
    - hosts:
        - proxmox.frittylab.xyz
      secretName: frittylab-tls
  rules:
    - host: proxmox.frittylab.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: proxmox
                port:
                  number: 8006
